# app/Http/Controllers/Controller.php
@@ -8,20 +8,24 @@ use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
     /**
-     * @OA\Info(
-     *      version="1.0.0",
-     *      title="Swagger API Documentation",
-     *      description="Laravel"
-     * )
-     *
-     * @OA\Server(
-     *      url="http://127.0.0.1:8000/",
-     *      description="Demo API Server"
-     * )
-
-     *
-     *
-     */
+    * @OA\Info(
+    *      version="1.0.0",
+    *      title="Swagger API Documentation",
+    *      description="Laravel"
+    * )
+    *
+    * @OA\Server(
+    *      url="http://127.0.0.1:8000/",
+    *      description="Demo API Server"
+    * )
+    * @OA\SecurityScheme(
+    *      securityScheme="bearerAuth",
+    *      type="http",
+    *      scheme="bearer"
+    *  )
+    *
+    *
+    */
 
 class Controller extends BaseController
 {
